# vinylizer

./: .gitignore  CMakeLists.txt  README.md
icon/: resources.qrc
src/: main.cpp
src/common/: alpha_228.h  canvas.cpp  canvas.h  logger.h  path_utils.h  timer.h  types.h
src/core/: diff_renderer.cu  diff_renderer.h  optimizer.cpp  optimizer.h  pipeline.cpp  pipeline.h
src/cuda/: canvas_render.cu  canvas_render.h  color_utils.cuh  render_kernel.cu
src/gui/: inject_worker.cpp  inject_worker.h  main_gui.cpp  optimize_worker.cpp  optimize_worker.h  render_canvas.cpp  render_canvas.h  transition.h
src/inject/: inject.cpp  inject.h
src/output/: json_writer.cpp  json_writer.h
src/preprocess/: preprocessor.cpp  preprocessor.h
